# rolly-segments

./: .gitignore  LQR_CALC.py  README.md  notes  platformio.ini
3d prints/: ASA-CF_PARTS_1h19m.3mf  Battery + Axis mount.3mf  Segment - Battery + Axis mount (3).3mf  Segment - Battery + Axis mount.3mf  Servo+Motor prints.3mf  Test Machine Prints.3mf
Bistable/: bistable_curved_beam.m  bistable_excitation_sim.m  bistable_math_derivation.bib  bistable_math_derivation.tex  bistable_math_derivation.typ  optimize_displacement_sim1.m  optimize_displacement_sim2.m  rs05_motor_specifications.tex  rs05_motor_specifications.typ
Bistable/Mermaid Charts/: export_mermaid_pngs.sh  fix_svg_foreignobject.py  mermaid-bw-config.json  mermaid-bw.css
Bistable/singular beam/: bistable_curved_beam.m  bistable_excitation_sim.m  optimize_displacement_sim2.m
Bistable/tools/: latex_to_typst.py
Control/: controller.py  cube.py  sup.py  test.py
Control/templates/: dashboard.html
Esp32 Can+IMU/: Esp32 Can+IMU BOM.csv  Esp32 Can+IMU.kicad_pcb  Esp32 Can+IMU.kicad_prl  Esp32 Can+IMU.kicad_pro  Esp32 Can+IMU.kicad_sch  IMU_SPI_DEBUG.md  Orangatang.kicad_sym  circuit_diagram.txt  fabrication-toolkit-options.json  fp-lib-table  platformio.ini  sym-lib-table  ~Esp32 Can+IMU.kicad_pro.lck  ~Esp32 Can+IMU.kicad_sch.lck
Esp32 Can+IMU/pico_uart_bridge/pico_sdk/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
include/: axis_mqtt_tools.h  imu.h
src/: axis_mqtt_tools.cpp  axis_wifi_manager.cpp  imu.cpp  main.cpp  main_ota_test.cpp  old_main.cpp  pins_arduino.h
(+84 files in other folders)
